--- a/java/springboot-jsp-helloworld/pom.xml
+++ b/java/springboot-jsp-helloworld/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.hellokoding.springboot</groupId>
     <artifactId>springboot-jsp-helloworld</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
